--- a/abc.org
+++ b/abc.org
@@ -25,7 +25,11 @@
 ** M x - commands
 * MAGIT
 ** g s - open magit status
-*** c c - commit
+*** s[S] - stage[all]
+*** u[U] - unstage[all]
+*** c c - commit buffer
+**** C-c C-c - commit
+**** C-c C-k - discard
 *** TAB - expand/collapse
 *** x - discard file changes
 
