--- a/abc.org
+++ b/abc.org
@@ -32,6 +32,7 @@
 **** C-c C-k - discard
 *** TAB - expand/collapse
 *** x - discard file changes
+*** z - stash
 
 * LAYOUT
 ** l L - load layout from file
